--- a/client/views/footer/footer.html
+++ b/client/views/footer/footer.html
@@ -4,19 +4,32 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-sm-5">
-                    <h5>Riot Design <small>Web &amp; Graphic Design Agency</small></h5>
-                    <p>Via Jacopo Carrucci, 152  - 50053 Empoli (FI) <br>
-                        +380683499357 - massage@mail.ru<br></p>
-                    <!-- Put this script tag to the <head> of your page -->
-                    <div id="vk_like"></div>
+
+
+                <div class="col-sm-3">
+                <address>
+                    <strong>Twitter, Inc.</strong><small>Web &amp; Graphic Design Agency</small><br>
+                    795 Folsom Ave, Suite 600<br>
+                    San Francisco, CA 94107<br>
+                    <abbr title="Phone">P:</abbr> (123) 456-7890
+                </address>
+
+                <address>
+                    <strong>Full Name</strong><br>
+                    <a href="mailto:#">first.last@example.com</a>
+                </address>
+                </div>
+                <div class="col-sm-9">
+                    <div class="row" id="google_maps">
+                            <div class="google-maps"  data-marker-address="Zaporozhye" data-map-address="Zaporozhye" data-zoom="14" style="position: relative; background-color: rgb(229, 227, 223); overflow: hidden;
+                            height: 400px;width: 900px;z-index: 10;" ></div>
+                        <div class="top_arrow"></div>
+                    </div>
                 </div>
             </div>
 
             <hr>
             <div class="sotto-footer">
-
-
                 <div class="icone-social">
                     <a href="http://www.facebook.com/riotdesign.eu" target="_blank" class="icona-facebook"> </a>
                     <a href="http://twitter.com/riot_design_eu" target="_blank" class="icona-twitter"> </a>
