--- a/client/views/menu/menu.html
+++ b/client/views/menu/menu.html
@@ -3,5 +3,6 @@
         <li><a href="javascript:;" >Домашняя</a></li>
         <li><a href="javascript:;" name="#prices" class="scroll_to">Цены</a></li>
         <li><a href="javascript:;" name="#contacts"  class="scroll_to">Контакты</a></li>
+        <li><a href="javascript:;" name="#google_maps"  class="scroll_to">Мы на Карте</a></li>
     </ul>
 </template>
