--- a/client/views/footer/footer.html
+++ b/client/views/footer/footer.html
@@ -8,21 +8,52 @@
 
                 <div class="col-sm-3">
                 <address>
-                    <strong>Twitter, Inc.</strong><small>Web &amp; Graphic Design Agency</small><br>
+                    <strong>Владимир Январь</strong>&nbsp;<small>массажист</small><br>
                     795 Folsom Ave, Suite 600<br>
                     San Francisco, CA 94107<br>
-                    <abbr title="Phone">P:</abbr> (123) 456-7890
+
                 </address>
 
                 <address>
-                    <strong>Full Name</strong><br>
-                    <a href="mailto:#">first.last@example.com</a>
+                    <div class="row">
+                    <div class="col-sm-3">
+                        <i class="fa fa-envelope  fa-3x"></i>
+                    </div>
+                    <div class="col-sm-9">
+                        <div class="">
+                            <a href="#" class="show_contact">nemys.gvv@rambler.ru</a>
+                        </div>
+                    </div>
+                    </div>
+                    <div class="row">
+                    <div class="col-sm-3">
+                        <i class="fa fa-phone  fa-3x"></i>
+                    </div>
+                    <div class="col-sm-9">
+                        <div class="">
+                            066 244 66 55  <br>
+                            068 349 93 57
+                        </div>
+                    </div>
+                    </div>
+                    <div class="row">
+                    <div class="col-sm-3">
+                        <i class="fa fa-skype  fa-3x"></i>
+                    </div>
+                    <div class="col-sm-9">
+
+                        <div>
+                            nemys.gvv
+                        </div>
+                    </div>
+                    </div>
+
                 </address>
                 </div>
                 <div class="col-sm-9">
                     <div class="row" id="google_maps">
                             <div class="google-maps"  data-marker-address="Zaporozhye" data-map-address="Zaporozhye" data-zoom="14" style="position: relative; background-color: rgb(229, 227, 223); overflow: hidden;
-                            height: 400px;width: 900px;z-index: 10;" ></div>
+                            height: 400px;width: 100%;z-index: 10;" ></div>
                         <div class="top_arrow"></div>
                     </div>
                 </div>
@@ -38,8 +69,7 @@
                     <a href="http://instagram.com/riot_design" target="_blank" class="icona-instagram"> </a>
                 </div>
 
-                <p class="copyright"><a href="/en/privacy/">Privacy and legal notes</a> - © 2014 Riot Design</p>
-
+                {{>footerBottom}}
             </div>
 
         </div>
