--- a/client/views/menu/menu.html
+++ b/client/views/menu/menu.html
@@ -1,8 +1,8 @@
 <template name="menu">
     <ul class="top_menu" >
-        <li><a href="javascript:;" >Домашняя</a></li>
-        <li><a href="javascript:;" name="#prices" class="scroll_to">Цены</a></li>
-        <li><a href="javascript:;" name="#contacts"  class="scroll_to">Контакты</a></li>
-        <li><a href="javascript:;" name="#google_maps"  class="scroll_to">Мы на Карте</a></li>
+        <li><a href="{{pathFor 'posts'}}" class="btn border-btn white">Статьи</a></li>
+        <li><a href="javascript:;" name="#prices" class="scroll_to btn border-btn white">Цены</a></li>
+        <li><a href="javascript:;" name="#contacts"  class="scroll_to btn border-btn white">Контакты</a></li>
+        <li><a href="javascript:;" name="#google_maps"  class="scroll_to btn border-btn white">Мы на Карте</a></li>
     </ul>
 </template>
