--- a/client/views/parts/parallaxTwo.html
+++ b/client/views/parts/parallaxTwo.html
@@ -2,7 +2,7 @@
     <div class="row-fluid" style="height: 460px;">
     <aside id="portfolio-cta2" class="seperator-type parallax-type2">
         <!-- Parallax -->
-        <div class="parallax two" style="background-image: url('/img/header.jpg');"></div>
+        <div class="parallax two"></div>
         <!-- End Parallax -->
         <div class="container" style="padding: 20px 50px 380px 0;">
             <div class="span1 pull-right"></div>
