--- a/client/views/parts/prices.html
+++ b/client/views/parts/prices.html
@@ -12,7 +12,7 @@
                                 <div class="package-price"><div class="price">70/110 грн</div></div>
                                 <div class="package-features">
                                     <ul>
-                                        <li>Длительность - 60(70грн)/90(110грн) <small>мин</small> </li>
+                                        <li>Длительность - 60/90<small>мин</small>70/110<small>грн</small></li>
                                         <li>Воротниковая зона (15 минут) 20 грн</li>
                                         <li>Шейно-грудной отдел (20 минут) 30 грн</li>
                                         <li>Поясничный отдел (20 минут) 30 грн</li>
@@ -30,7 +30,7 @@
                                 <div class="package-price"><div class="price">70/110 грн</div></div>
                                 <div class="package-features">
                                     <ul>
-                                        <li>Длительность - 60(70грн)/90(110грн) <small>мин</small> </li>
+                                        <li>Длительность - 60/90<small>мин</small>70/110<small>грн</small></li>
                                         <li>Воротниковая зона (15 минут) 20 грн</li>
                                         <li>Шейно-грудной отдел (20 минут) 30 грн</li>
                                         <li>Поясничный отдел (20 минут) 30 грн</li>
@@ -48,7 +48,7 @@
                                 <div class="package-price"><div class="price">70/110 грн</div></div>
                                 <div class="package-features">
                                     <ul>
-                                        <li>Длительность - 60(70грн)/90(110грн) <small>мин</small> </li>
+                                        <li>Длительность - 60/90<small>мин</small>70/110<small>грн</small></li>
                                         <li>Воротниковая зона (15 минут) 20 грн</li>
                                         <li>Шейно-грудной отдел (20 минут) 30 грн</li>
                                         <li>Поясничный отдел (20 минут) 30 грн</li>
@@ -66,7 +66,7 @@
                                 <div class="package-price"><div class="price">70/110 грн</div></div>
                                 <div class="package-features">
                                     <ul>
-                                        <li>Длительность - 60(70грн)/90(110грн) <small>мин</small> </li>
+                                        <li>Длительность - 60/90<small>мин</small>70/110<small>грн</small></li>
                                         <li>Воротниковая зона (15 минут) 20 грн</li>
                                         <li>Шейно-грудной отдел (20 минут) 30 грн</li>
                                         <li>Поясничный отдел (20 минут) 30 грн</li>
@@ -87,7 +87,7 @@
                                 <div class="package-price"><div class="price">70/110 грн</div></div>
                                 <div class="package-features">
                                     <ul>
-                                        <li>Длительность - 60(70грн)/90(110грн) <small>мин</small> </li>
+                                        <li>Длительность - 60/90<small>мин</small>70/110<small>грн</small></li>
                                         <li>Воротниковая зона (15 минут) 20 грн</li>
                                         <li>Шейно-грудной отдел (20 минут) 30 грн</li>
                                         <li>Поясничный отдел (20 минут) 30 грн</li>
@@ -123,7 +123,7 @@
                                 <div class="package-price"><div class="price">70/110 грн</div></div>
                                 <div class="package-features">
                                     <ul>
-                                        <li>Длительность - 60(70грн)/90(110грн) <small>мин</small> </li>
+                                        <li>Длительность - 60/90<small>мин</small>70/110<small>грн</small> </li>
                                         <li>Воротниковая зона (15 минут) 20 грн</li>
                                         <li>Шейно-грудной отдел (20 минут) 30 грн</li>
                                         <li>Поясничный отдел (20 минут) 30 грн</li>
@@ -141,7 +141,7 @@
                                 <div class="package-price"><div class="price">70/110 грн</div></div>
                                 <div class="package-features">
                                     <ul>
-                                        <li>Длительность - 60(70грн)/90(110грн) <small>мин</small> </li>
+                                        <li>Длительность - 60/90<small>мин</small>70/110<small>грн</small> </li>
                                         <li>Воротниковая зона (15 минут) 20 грн</li>
                                         <li>Шейно-грудной отдел (20 минут) 30 грн</li>
                                         <li>Поясничный отдел (20 минут) 30 грн</li>
