--- a/client/views/posts/show.html
+++ b/client/views/posts/show.html
@@ -1,5 +1,16 @@
-<template name="show">
-    <div class="col-lg-2 right_image">
-        <img src="/img/bamboo.png"/>
+<template name="PostShow">
+    {{>header2}}
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <h1>{{title}}</h1>
+                <div>{{{body}}}</div>
+             </div>
+        </div>
     </div>
+
+
+
+
+    {{>postsFooter}}
 </template>
