--- a/client/views/footer/postsFooter.html
+++ b/client/views/footer/postsFooter.html
@@ -2,7 +2,7 @@
     <div class="col-lg-2 right_image">
         <img src="/img/bamboo.png"/>
     </div>
-    <footer class="content-info" role="contentinfo" style="position: absolute;width:100%">
+    <footer class="content-info"  style="">
         <hr>
         <div class="container">
             <div class="row">
