--- a/client/views/posts/new.html
+++ b/client/views/posts/new.html
@@ -1,17 +1,13 @@
 <template name="newPost">
     {{>header2}}
 
-    <div class="container">
+    <div class="container"  style="min-height: 830px">
         <div class="row">
             <div class="col-lg-12">
                 <form id='new_post'>
                     <div class="form-group">
                         <input type="text" class="post_title form-control" placeholder="Заголовок"/>
                     </div>
-                    <div class="form-group">
-                        <input type="text" class="post_slug form-control" placeholder="Slug"/>
-                    </div>
-
                     <div class="form-group">
                         <textarea id ='editor' rows="20" cols="45"></textarea>
                     </div>
