--- a/client/views/posts/show.html
+++ b/client/views/posts/show.html
@@ -1,6 +1,6 @@
 <template name="PostShow">
     {{>header2}}
-    <div class="container">
+    <div class="container" style="min-height: 840px">
         <div class="row">
             <div class="col-lg-12">
                 <h1>{{title}}</h1>
@@ -8,9 +8,5 @@
              </div>
         </div>
     </div>
-
-
-
-
     {{>postsFooter}}
 </template>
